corrected spelling with word

--- a/Report/pages/angular.tex
+++ b/Report/pages/angular.tex
@@ -24,7 +24,7 @@ The Angular framework manages the lifecycle of each component. Throughout this l
 \Subsubsection[bindings]{Template Syntax - Bindings}
 A template in the Angular context is equivalent to a \gls{mvvm} View and is written in \gls{html}. All \gls{html} tags are allowed, though some tags like \lstcode{<html>} or \lstcode{<body>} are meaningless in this context. The official set of tags is extended with tags that refer to components as described in \myref{subsubsec:components}.
 
-Like many \gls{mvvm} frameworks, Angular supports bindings. These are used to display data obtained from the ViewModel or, in case of input controls, send data back to the ViewModel. Interpolation is used to display data. The syntax used by Angular is \{\{\lstcode{myObject.myProperty}\}\} as shown in \mylineref{lst:nav-item-component.html}{navItem_interpolation}. Angular will evalute the text between the curly brackets as an expression and then display the result. Usually, the context for the expression is the component's instance.
+Like many \gls{mvvm} frameworks, Angular supports bindings. These are used to display data obtained from the ViewModel or, in case of input controls, send data back to the ViewModel. Interpolation is used to display data. The syntax used by Angular is \{\{\lstcode{myObject.myProperty}\}\} as shown in \mylineref{lst:nav-item-component.html}{navItem_interpolation}. Angular will evaluate the text between the curly brackets as an expression and then display the result. Usually, the context for the expression is the component's instance.
 
 \file{nav-item-component.html}{Example of an angular template.}{HTML5}
 
@@ -63,7 +63,7 @@ Services are used to encapsulate functionality which helps promote reusability a
 
 \Subsubsection[ngmodules]{Angular Modules}
 
-When talking about modules in an Angular application, it is important to distinguish between Angular modules, also called NgModules, and \gls{js} (ES2015) modules. Those two are different concepts and can be used side by side. While \gls{js} modules are used to manage collections of \gls{js} objects, NgModules are more like containers for related chunks of code. An NgModule contains components, services, and/or other code files which all belong to one domain, a workflow, or are performing similar tasks. From an architectural perspective they bear great resemblance to a code library like a \gls{dll}. Like \gls{dll}s, they can import other NgModules, choose which classes, services, and/or components should be exported and which should only be visibile to classes inside the NgModule in question.
+When talking about modules in an Angular application, it is important to distinguish between Angular modules, also called NgModules, and \gls{js} (ES2015) modules. Those two are different concepts and can be used side by side. While \gls{js} modules are used to manage collections of \gls{js} objects, NgModules are more like containers for related chunks of code. An NgModule contains components, services, and/or other code files which all belong to one domain, a workflow, or are performing similar tasks. From an architectural perspective they bear great resemblance to a code library like a \gls{dll}. Like \gls{dll}s, they can import other NgModules, choose which classes, services, and/or components should be exported and which should only be visible to classes inside the NgModule in question.
 
 \file{app-module.ts}{The Jukebox AppModule file.}{JavaScript}
 
@@ -111,7 +111,7 @@ The interceptor is a class which implements the \lstcode{HttpInterceptor} interf
 
 \Section{Angular Material}
 
-Angular Material is a framework, also developed by Google, which provides pre-built controls. These include buttons, trees, datepickers and many more. All of these controls are styled with the Google Material style guidelines in mind. To be able to use this framework, the developer has to install it via \gls{npm} or a similar package management tool. \cite{angularMaterial}
+Angular Material is a framework, also developed by Google, which provides pre-built controls. These include buttons, trees, date pickers and many more. All of these controls are styled with the Google Material style guidelines in mind. To be able to use this framework, the developer has to install it via \gls{npm} or a similar package management tool. \cite{angularMaterial}
 
 \Subsubsection{Angular Material Components}
 Each control is an Angular component. This means that controls can be used in the \gls{html} by including the corresponding tag, as described in \myref{subsubsec:components}. Any \gls{html} tag which starts with the \lstcode{mat-} prefix references an Angular Material control/component.
@@ -120,7 +120,7 @@ This prefix was changed from \lstcode{md-} to the current \lstcode{mat-}. At the
 
 Many controls like buttons or the toolbar are only referenced in the \gls{html} because they don't contain much logic. These components are designed to communicate through their events and properties. This can be achieved through bindings in the \gls{html} code (see \myref{subsubsec:bindings}). Especially for dialogs, a developer wants to have more control over how and when the dialog is displayed. Dialogs are also invoked through the \gls{ts}, for instance inside some method or event handler. Typically, the dialog contains some sort of question and the answer determines how the application should proceed. Since a dialog is a modal element which is always positioned as an overlay, it is unclear where the element should be placed in the \gls{dom}. Angular Material solves this by injecting the \lstcode{MatDialog} into the component's \gls{ts} file (\mylineref{lst:dialog.ts}{dialog_injected}). This means that the placement in the \gls{dom} is done by the framework and the developer doesn't have to worry about it.
 
-A filepicker dialog was implemented for the Jukebox project. This dialog serves the purpose of selecting a folder which the server should use to index *.mp3 files. Once the user clicks the \enquote{addPath} button, a dialog is created. This is done via the \lstcode{MatDialog.open()} method, as shown in \mylineref{lst:dialog.ts}{dialog_open}. The \lstcode{MatDialog.open()} method requires the type of an Angular component as its first argument. This determines the component to be displayed as the dialog's content. In addition, a configuration object may be passed to the method. The configuration object is of type \lstcode{MatDialogConfig} and is used to configure the dialog's appearance. One of its properties is the \lstcode{data} property which allows the developer to pass an arbitrary object into the dialog. This feature was used to pass a custom configuration object of type \lstcode{FilePickerConfig} (\mylineref{lst:dialog.ts}{dialog_filePickerConfig}).
+A file picker dialog was implemented for the Jukebox project. This dialog serves the purpose of selecting a folder which the server should use to index *.mp3 files. Once the user clicks the \enquote{addPath} button, a dialog is created. This is done via the \lstcode{MatDialog.open()} method, as shown in \mylineref{lst:dialog.ts}{dialog_open}. The \lstcode{MatDialog.open()} method requires the type of an Angular component as its first argument. This determines the component to be displayed as the dialog's content. In addition, a configuration object may be passed to the method. The configuration object is of type \lstcode{MatDialogConfig} and is used to configure the dialog's appearance. One of its properties is the \lstcode{data} property which allows the developer to pass an arbitrary object into the dialog. This feature was used to pass a custom configuration object of type \lstcode{FilePickerConfig} (\mylineref{lst:dialog.ts}{dialog_filePickerConfig}).
 
 \file{dialog.ts}{Sample dialog in the \lstcode{SettingsComponent}.}{JavaScript}
 
@@ -137,13 +137,13 @@ Using intuitive icons is a big part of the visual design of any application. The
 
 There are many ways to use the Material icon set. The Jukebox project mainly uses the \lstcode{<mat-icon />} tag (see \mylineref{lst:navigation-bar.html}{navbar_icon}), but it is also possible to associate \gls{css} classes with specific icons or use the \lstcode{<svg />} tag. It should be noted, though, that the latter two examples are usually needed if the provided icons aren't sufficient or if \zB another icon font is used in addition. The font of the Material icon set has to be included via the \lstcode{@font-face} \gls{css} rule in order to use the icon set.
 
-During the development of the Jukebox project, a bug was discovered which resulted in no icons being displayed. This only occurred in the Internet Explorer and Edge browsers and was fixed by changing how icons are selected. Angular Material offers the possibility to use an icon's name to reference it inside the \gls{html} tag \zB \lstcode{<mat-icon>menu</mat-icon>}. Another method is to use the unicode explicitly. This solution did resolved the issue in the Internet Explorer and Edge browsers. This method has the drawback that it isn't obvious anymore what an icon represents or looks like by just looking at the \gls{html} code. Some users in the community have created command line tools, which integrate into the Angular \gls{cli} or work as standalone scripts, which replace all names with the corresponding unicodes. Since this thesis is focused on compatibility between Electron and Angular, none of these tools were evaluated. \cite{materialIcons}
+During the development of the Jukebox project, a bug was discovered which resulted in no icons being displayed. This only occurred in the Internet Explorer and Edge browsers and was fixed by changing how icons are selected. Angular Material offers the possibility to use an icon's name to reference it inside the \gls{html} tag \zB \lstcode{<mat-icon>menu</mat-icon>}. Another method is to use the Unicode explicitly. This solution did resolved the issue in the Internet Explorer and Edge browsers. This method has the drawback that it isn't obvious anymore what an icon represents or looks like by just looking at the \gls{html} code. Some users in the community have created command line tools, which integrate into the Angular \gls{cli} or work as standalone scripts, which replace all names with the corresponding Unicodes. Since this thesis is focused on compatibility between Electron and Angular, none of these tools were evaluated. \cite{materialIcons}
 
 
 \Section{Websockets}
 
 The \gls{http} protocol was designed for web pages and is based on client-initiated communication. There are techniques like long polling which simulate a two-way communication channel but even there, the client needs to initialize the communication. This becomes a problem in web applications which rely on events or push notifications rather than on polling. In the Jukebox project, one requirement was that a music player could be remote-controlled. Websockets were used to push events like \enquote{Next} or \enquote{Play/Pause} to the player.
 
-Websockets can be used by calling the \lstcode{WebSocket.send()} and \lstcode{WebSocket\allowbreak .close()} methods as well as listening to the various events. Another approach is to wrap the WebSocket into a RxJS \lstcode{Subject}, as shown in \myautoref{lst:websocket.ts} \cite{rxjs} \cite{js_websockets}. To do so, the developer creates an \lstcode{Observable} which binds to the events of the \lstcode{WebSocket} object (lines \ref{line:websocket_observable_start} to \ref{line:websocket_observable_stop}). Then an \lstcode{Observer} is created (line \ref{line:websocket_observer}). In this example, the \lstcode{Observer} is an object which has a \lstcode{next()} method that is empty. This is due to the fact that in the Jukebox project notifications are only received through the websocket. This \lstcode{next()} method is normally used to call the \lstcode{WebSocket.send()} method to send data back to the server. A RxJS \lstcode{Subject} is created from the \lstcode{Observer} and \lstcode{Observable} objects. This \lstcode{Subject} can then be subscribed to in order to receive incoming messages. To send messages the \lstcode{Subject.next()} method may be used.
+Websockets can be used by calling the \lstcode{WebSocket.send()} and \lstcode{WebSocket\allowbreak .close()} methods as well as listening to the various events. Another approach is to wrap the WebSocket into a RxJS \lstcode{Subject}, as shown in \myautoref{lst:WebSocket.ts} \cite{rxjs} \cite{js_websockets}. To do so, the developer creates an \lstcode{Observable} which binds to the events of the \lstcode{WebSocket} object (lines \ref{line:websocket_observable_start} to \ref{line:websocket_observable_stop}). Then an \lstcode{Observer} is created (line \ref{line:websocket_observer}). In this example, the \lstcode{Observer} is an object which has a \lstcode{next()} method that is empty. This is due to the fact that in the Jukebox project notifications are only received through the WebSocket. This \lstcode{next()} method is normally used to call the \lstcode{WebSocket.send()} method to send data back to the server. A RxJS \lstcode{Subject} is created from the \lstcode{Observer} and \lstcode{Observable} objects. This \lstcode{Subject} can then be subscribed to in order to receive incoming messages. To send messages the \lstcode{Subject.next()} method may be used.
 
-\file{websocket.ts}{Sample websocket usage.}{JavaScript}
+\file{WebSocket.ts}{Sample WebSocket usage.}{JavaScript}
