--- a/Report/pages/asp.tex
+++ b/Report/pages/asp.tex
@@ -16,7 +16,7 @@ The most important concept for a developer is that of a middleware. In the \gls{
 
 Middlewares are usually provided by the \gls{asp} framework, or they can be created by the developer for specific tasks. In order to create a middleware the developer has two options. He may simply create a delegate with the correct signature. Since this is similar to functional programming, Microsoft also provided a method to use classes. When a class is used, the \gls{asp} framework will check whether this class contains a method which matches the signature of a middleware. Using this method, the developer may take advantage of \gls{di} for any dependencies the custom middleware requires. \cite{owinKatana}
 
-Another concept defined by the \gls{owin} standard is the middleware pipeline. Every incomming \gls{http} request will traverse this pipeline and be processed along the way. A request is often referred to as context and is contained in the \lstcode{IDictionary} object of the middleware delegate. Depending on the circumstances, a middleware might alter the request and call the next middleware, or complete the request. Each request starts at the first middleware. Yet not every request reaches the last middleware, since it might be processed before it gets to the end. Once a request is processed, it travels back to the beginning of the pipeline. This is illustrated in \myautoref{fig:owin-middleware-chain.png}.
+Another concept defined by the \gls{owin} standard is the middleware pipeline. Every incoming \gls{http} request will traverse this pipeline and be processed along the way. A request is often referred to as context and is contained in the \lstcode{IDictionary} object of the middleware delegate. Depending on the circumstances, a middleware might alter the request and call the next middleware, or complete the request. Each request starts at the first middleware. Yet not every request reaches the last middleware, since it might be processed before it gets to the end. Once a request is processed, it travels back to the beginning of the pipeline. This is illustrated in \myautoref{fig:owin-middleware-chain.png}.
 
 \autoImg{owin-middleware-chain.png}{Example of an OWIN middleware pipeline. \cite{owinKatana}}
 
@@ -152,7 +152,7 @@ These \glspl{url} are called deep links and are used by many web applications. T
 
 Whether a \gls{url} is a deep link or not is determined by a set of rules. Most importantly, the middleware checks whether the request has a file extension or not. This is needed because the index.html file references other files such as the bundle.js file. Furthermore, a configuration object is used. This configuration object stores paths which are not deep links because they are part of another middleware or feature of the web server. The Jukebox project uses the Swagger web \gls{api} documentation tool which can be accessed through the \gls{url} \enquote{http://jukebox/swagger} \cite{swagger}. Therefore, the Swagger \gls{url} is not recognized as a deep link but as a \enquote{SpecialRoute}, which causes the middleware to pass the request further down the pipeline.
 
-When a deep link is found the middleware sets the \gls{http} status code to 200 OK and returns the index.html file. First attempts to solve this problem used a redirect mechanism to serve the index.html. This worked to the extent that the index.html file was served, but failed overall, because the deep link was lost due to the redirect. Since redirecting is not possible, the \lstcode{SpaMiddleware} needs to know where the index.html file is located. This can be achived by convention or explicit configuration. The middleware checks the \gls{asp} ContentRoot folder whether it contains a file called \enquote{index.html} without distinguishing between upper and lower case. If no file is found and none is specified through the \lstcode{PathToIndex} property on the configuration object, an exception is thrown.
+When a deep link is found the middleware sets the \gls{http} status code to 200 OK and returns the index.html file. First attempts to solve this problem used a redirect mechanism to serve the index.html. This worked to the extent that the index.html file was served, but failed overall, because the deep link was lost due to the redirect. Since redirecting is not possible, the \lstcode{SpaMiddleware} needs to know where the index.html file is located. This can be achieved by convention or explicit configuration. The middleware checks the \gls{asp} ContentRoot folder whether it contains a file called \enquote{index.html} without distinguishing between upper and lower case. If no file is found and none is specified through the \lstcode{PathToIndex} property on the configuration object, an exception is thrown.
 
 \newpage
 
@@ -187,7 +187,7 @@ A mixture of all three approaches has proven to be more practical than sticking 
 
 \Subsubsection{Migrations}
 
-An application's data model will grow during the development of the application. \gls{ef} supports changes in the data model with its migrations feature. A new migration can be created using the command line tools with the command \lstcode{dotnet ef migrations add <migrationName>}. Similiarly, the \lstcode{remove} command can be used to remove a migration. With the \lstcode{add} command \gls{ef} will create a migration class and then update the model snapshot class. The model snapshot class is used as a base line for comparison when a new migration is added. The created migration class contains code which describes the differences between the old model, as detailed in the snapshot, and the current model, as specified by the class structure. Every migration is derived from the abstract base class \lstcode{Migration} and has to implement the abstract \lstcode{Up()} and \lstcode{Down()} methods. As shown in \myautoref{lst:migration.cs}, the \lstcode{Up()} method contains instructions on how to apply the migration and the \lstcode{Down()} method contains instructions on how to revert the migration. \cite{efMigrations}
+An application's data model will grow during the development of the application. \gls{ef} supports changes in the data model with its migrations feature. A new migration can be created using the command line tools with the command \lstcode{dotnet ef migrations add <migrationName>}. Similarly, the \lstcode{remove} command can be used to remove a migration. With the \lstcode{add} command \gls{ef} will create a migration class and then update the model snapshot class. The model snapshot class is used as a base line for comparison when a new migration is added. The created migration class contains code which describes the differences between the old model, as detailed in the snapshot, and the current model, as specified by the class structure. Every migration is derived from the abstract base class \lstcode{Migration} and has to implement the abstract \lstcode{Up()} and \lstcode{Down()} methods. As shown in \myautoref{lst:migration.cs}, the \lstcode{Up()} method contains instructions on how to apply the migration and the \lstcode{Down()} method contains instructions on how to revert the migration. \cite{efMigrations}
 
 There are two ways to apply one or more migrations. The first solution is to use the \gls{ef} command line tools to directly migrate the database using the command \lstcode{dotnet ef database update}. This is usually the preferred method, but may not be feasible depending on the setup of the database. When direct migration is not possible, the \gls{ef} command line tools can also be used to create a \gls{sql} script. This is achieved using the command \lstcode{dotnet ef migrations script}. Both methods offer the option to revert the database by specifying the \lstcode{From} and \lstcode{To} migrations explicitly.
 
@@ -229,10 +229,10 @@ Validation is an important aspect of any application. The back-end has to verify
 
 \Section{ASP.NET Core Websockets}
 
-To use websockets in \gls{asp}, the websocket middleware must be added to the middleware pipeline. Here, the developer can configure settings like the \lstcode{KeepAliveInterval} and the \lstcode{ReceiveBufferSize}. Whether a request is a request for a websocket or not, can be detected using the \lstcode{IsWebSocketRequest} property on the \lstcode{HttpContext.WebSockets} object. When such a request is detected, the communication can be established using the \lstcode{AcceptWebSocket\-Async()} method on the \lstcode{HttpContext.WebSocket} object. This method returns a \lstcode{Task<WebSocket>} of which the \lstcode{WebSocket} is used for the entire communication. \cite{aspWebsockets}
+To use websockets in \gls{asp}, the WebSocket middleware must be added to the middleware pipeline. Here, the developer can configure settings like the \lstcode{KeepAliveInterval} and the \lstcode{ReceiveBufferSize}. Whether a request is a request for a WebSocket or not, can be detected using the \lstcode{IsWebSocketRequest} property on the \lstcode{HttpContext.WebSockets} object. When such a request is detected, the communication can be established using the \lstcode{AcceptWebSocket\-Async()} method on the \lstcode{HttpContext.WebSocket} object. This method returns a \lstcode{Task<WebSocket>} of which the \lstcode{WebSocket} is used for the entire communication. \cite{aspWebsockets}
 
-After accepting the socket, the Jukebox \gls{asp} server will authenticate the client and, if the authentication was successful, create a \lstcode{Player} object. Since the websocket connection will be terminated once the request is finished, the server will use a \enquote{keep-alive loop}, as shown in \myautoref{lst:HandlePlayerOwnerWebsocket.cs}. This loop will wait for any message coming from the player. Once a message arrives, the server checks whether the client wants to terminate the session or has sent data. In case of termination, the websocket will be closed and the \lstcode{Player} object will be destroyed. If the client has sent data, the server will handle the message in its \lstcode{HandlePlayerMessage()} method.
+After accepting the socket, the Jukebox \gls{asp} server will authenticate the client and, if the authentication was successful, create a \lstcode{Player} object. Since the WebSocket connection will be terminated once the request is finished, the server will use a \enquote{keep-alive loop}, as shown in \myautoref{lst:HandlePlayerOwnerWebsocket.cs}. This loop will wait for any message coming from the player. Once a message arrives, the server checks whether the client wants to terminate the session or has sent data. In case of termination, the WebSocket will be closed and the \lstcode{Player} object will be destroyed. If the client has sent data, the server will handle the message in its \lstcode{HandlePlayerMessage()} method.
 
 \newpage
 
-\file{HandlePlayerOwnerWebsocket.cs}{The \enquote{keep-alive loop} for a websocket.}{NC_CSharp}
+\file{HandlePlayerOwnerWebsocket.cs}{The \enquote{keep-alive loop} for a WebSocket.}{NC_CSharp}
